Fix bugs on overflow with popup image display

--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ body {
   position: fixed;
   top: 10%;
   bottom: 10%;
-  width: 40%;
+  width: 30%;
   left: 30%;
   margin: auto;
   background-color: #fff;
@@ -107,6 +107,14 @@ body {
   border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.pop-image-cont {
+  width: 100%;
+  height: 50%;
+  display: flex;
 }
 
 .pop-image {
@@ -115,10 +123,10 @@ body {
 }
 
 .closeBtn {
-  float: right;
+  text-align: right;
   background-color: #fff;
   border: none;
-  font-size: 2rem;
+  font-size: 1.3rem;
 }
 
 .popup-content {
